# bitmask

./: Cargo.toml  README.md
examples/: demo.rs
src/: bitmask.rs  lib.rs
tests/: bitmask.rs
